# povineq

./: .gitignore  404.html  LICENSE  README.md  compound-gpid.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  roadmap.json  sitemap.xml
.cg-docs/brainstorms/: 2026-03-31-povineq-architecture-and-stack.md  2026-04-01-documentation-website.md
.cg-docs/plans/: 2026-03-31-povineq-v1-full-implementation.md  2026-04-01-documentation-website.md
.cg-docs/reviews/: 2026-03-31-povineq-v1-full-implementation-review.md  2026-04-01-documentation-website-light-review.md  2026-04-01-documentation-website-review.md  2026-04-01-povineq-light-review.md
.cg-docs/solutions/bugs/: 2026-04-01-pandas-inplace-returns-none.md
.cg-docs/solutions/build-errors/: 2026-04-01-hishel-v1-api-removed.md  2026-04-01-pep735-dependency-groups-pip-incompatible.md
.cg-docs/solutions/git-workflows/: 2026-04-01-mkdocs-github-pages-uv-production-pattern.md
.cg-docs/solutions/testing-patterns/: 2026-04-01-loguru-no-fstrings.md
.github/workflows/: ci.yml  docs.yml
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md
docs/scripts/: gen_ref_pages.py
docs/tutorials/: auxiliary-data.md  caching.md  country-profiles.md  poverty-statistics.md
getting-started/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/auxiliary/: index.html
reference/country_profiles/: index.html
reference/info/: index.html
reference/internal/cache/: index.html
reference/internal/errors/: index.html
reference/internal/response/: index.html
reference/stats/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/povineq/: __init__.py  _aux_store.py  _cache.py  _client.py  _constants.py  _errors.py  _request.py  _response.py  _validation.py  auxiliary.py  country_profiles.py  info.py  py.typed  stats.py  utils.py
tests/: conftest.py  test_aux_store.py  test_auxiliary.py  test_cache.py  test_client.py  test_constants.py  test_country_profiles.py  test_errors.py  test_imports.py  test_info.py  test_request.py  test_response.py  test_stats.py  test_utils.py  test_validation.py
tutorials/auxiliary-data/: index.html
tutorials/caching/: index.html
tutorials/country-profiles/: index.html
tutorials/poverty-statistics/: index.html
