[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "povineq"
version = "0.1.0"
description = "Python wrapper for the World Bank PIP API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "PIP Technical Team", email = "pip@worldbank.org" }]
keywords = ["poverty", "inequality", "world bank", "pip", "welfare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "loguru>=0.7",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/PIP-Technical-Team/povineq"
Documentation = "https://pip-technical-team.github.io/povineq/"
Repository = "https://github.com/PIP-Technical-Team/povineq"
Issues = "https://github.com/PIP-Technical-Team/povineq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/povineq"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RUF", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "online: requires internet connectivity (deselect with '-m not online')",
    "slow: slow tests (deselect with '-m not slow')",
]

[tool.coverage.run]
source = ["src/povineq"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
